objects/ASI_eForm_ITCRF_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Attach_in_Approval_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach in Approval Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed Quote</fullName>
                </value>
                <value>
                    <fullName>Reference Quote</fullName>
                </value>
                <value>
                    <fullName>Roll Back Plan</fullName>
                </value>
                <value>
                    <fullName>Software Installation License</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_FeedItemId__c</fullName>
        <label>FeedItemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_FileId__c</fullName>
        <label>FileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_File_Ext__c</fullName>
        <label>File Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Change_Request__c</fullName>
        <label>IT Change Request</label>
        <referenceTo>ASI_eForm_IT_Change_Request__c</referenceTo>
        <relationshipLabel>Form Attachments</relationshipLabel>
        <relationshipName>ASI_eForm_ITCRF_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Image_URL__c</fullName>
        <formula>if(
CASE(LOWER( ASI_eForm_File_Ext__c )
, &apos;png&apos;, 1
, &apos;jpg&apos;, 1
, &apos;gif&apos;, 1
, &apos;jpeg&apos;, 1
, &apos;jfif&apos;, 1
, &apos;tiff&apos;, 1
,0) = 1
, &apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB120BY90&amp;versionId=&apos; &amp; ASI_eForm_FileId__c &amp; &apos;&amp;operationContext=CHATTER&apos;
, NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ASI_eForm_FileId__c, ASI_eForm_File_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Preview__c</fullName>
        <formula>IF(ISBLANK(ASI_eForm_Image_URL__c), ASI_eForm_File_Name__c, IMAGE(ASI_eForm_Image_URL__c, ASI_eForm_File_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <label>ASI eForm ITCRF Attachment</label>
    <nameField>
        <displayFormat>DOCS-{00000000}</displayFormat>
        <label>Attachment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI eForm ITCRF Attachments</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_IT_Change_Request_Attachment</fullName>
        <active>true</active>
        <label>IT Change Request Attachment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>